--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 	        <artifactId>spring-boot-devtools</artifactId>
 	        <optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.4</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
