--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.leorain.apim.entity
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://172.16.150.173:3306/apim?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://172.16.150.173:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ulD6!k5v!skQ
