api接口管理平台开发

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ mybatis.config-locations=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.leorain.apim.entity
 
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://172.16.150.173:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username = root
-spring.datasource.password = ulD6!k5v!skQ
-
-
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://127.0.0.1:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.url = jdbc:mysql://172.16.150.173:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
 #spring.datasource.username = root
-#spring.datasource.password = root
+#spring.datasource.password = ulD6!k5v!skQ
+
+
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
