--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,20 @@ mybatis.config-locations=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.leorain.apim.entity
 
+#配置中心MongoDB数据库
+spring.data.mongodb.host=172.16.150.151
+spring.data.mongodb.port=10000
+spring.data.mongodb.database=test
+spring.data.mongodb.username=devlop
+spring.data.mongodb.password=devlop123
+
+#运维管理系统mysql数据库链接信息
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://172.16.150.173:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ulD6!k5v!skQ
 
-
+#运维管理系统mysql数据库链接信息
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #spring.datasource.url = jdbc:mysql://127.0.0.1:3306/apim?useUnicode=true&characterEncoding=utf-8&useSSL=false
 #spring.datasource.username = root
